fix genSources and add global run directory